--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ ul {
   color: rgb(145, 145, 145);
 }
 
-.signup-btn {
+#sidebar .signup-btn {
   background-color: white;
   color: black;
   border: 1px solid white;
@@ -54,14 +54,17 @@ ul {
   width: 180px;
   margin-bottom: 20px;
 }
-
-.signup-btn:hover {
+.navbar .input-group input,
+.navbar .input-group button {
+  height: 30px;
+}
+#sidebar .signup-btn:hover {
   color: white;
   background-color: rgb(60, 211, 60);
   border: 1px solid rgb(60, 211, 60);
 }
 
-.login-btn {
+#sidebar .login-btn {
   background-color: black;
   color: white;
   border: 1px solid white;
@@ -70,7 +73,7 @@ ul {
   margin-bottom: 20px;
 }
 
-.login-btn:hover {
+#sidebar .login-btn:hover {
   color: black;
   background-color: white;
 }
@@ -223,4 +226,8 @@ ul {
 
 .mainPage img {
   width: 200px;
+}
+
+.fixed-bottom .iconsImg img {
+  width: 15px;
 }
